// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`добавляет необходимые параметры поиска 1`] = `
Object {
  "category": "cars",
  "customs_state_group": "CLEARED",
  "damage_group": "NOT_BEATEN",
  "dealer_code": "favorit_motors_mkad_moskva",
  "dealer_org_type": 2,
  "from": "auto-snippet",
  "has_image": false,
}
`;

exports[`правильно формирует параметры для неофициального дилера 1`] = `
Object {
  "category": "cars",
  "dealer_code": "favorit_motors_mkad_moskva",
  "dealer_org_type": 2,
  "from": "auto-snippet",
}
`;

exports[`правильно формирует параметры для официального дилера 1`] = `
Object {
  "category": "cars",
  "dealer_code": "favorit_motors_mkad_moskva",
  "dealer_org_type": 1,
  "from": "auto-snippet",
}
`;
